Simple page with the logo at the top

--- a/app/index.html
+++ b/app/index.html
@@ -7,7 +7,7 @@
         <script src="node_modules/semantic-ui/examples/assets/library/jquery.min.js"></script>
         <script src="node_modules/semantic-ui/dist/semantic.min.js"></script>
     </head>
-    <body>
+    <body style="background-color: #FAE80A">
         <div id="app">
         </div>
     </body>
