--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>BCP REG UI</title>
+        <title>Tintz</title>
         <link rel="stylesheet" href="node_modules/semantic-ui/dist/semantic.min.css"/>
         <script src="node_modules/semantic-ui/examples/assets/library/jquery.min.js"></script>
         <script src="node_modules/semantic-ui/dist/semantic.min.js"></script>
